[package]
name = "const-hash"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"

[features]
default = [ "fasthash" ]

[dependencies]
fasthash = { version = "0.4", optional = true }

proc-macro2 = "0.4"
syn = { version = "0.15", features = ["full"] }
quote = "0.6"

[lib]
proc-macro = true